player name, fixed image not showing bug, various styles updates

--- a/src/app.css
+++ b/src/app.css
@@ -5,6 +5,7 @@
 .game-container {
   margin: 0 auto;
   max-width: 700px;
+  height: 90%;
   border: 1px solid #ccc;
   padding: 20px;
   border-radius: 8px;
@@ -18,20 +19,22 @@
 }
 
 .queen-section {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .worker-drone-section {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 30px;
 }
 
 .worker-row,
 .drone-row {
   display: flex;
   gap: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
+  margin-top: 10px;
 }
 
 .bee {
@@ -59,10 +62,15 @@
 }
 
 .hit-button {
-  margin: 20px 0;
+  margin: 20px;
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
+  background-color: #ff9800;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
 }
 
 .damage {
@@ -91,7 +99,7 @@
   position: fixed;
   top: 103px;
   right: 20px;
-  width: 300px;
+  width: 12%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -112,6 +120,7 @@
 
 .reset-button {
   margin-left: 40px;
+  background-color: #f44336;
 }
 
 .line-1 {
@@ -121,7 +130,7 @@
   width: 5px;
   background: red;
   z-index: 2;
-  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 .line-2 {
@@ -131,5 +140,42 @@
   width: 5px;
   background: red;
   z-index: 2;
-  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+.name-input-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.name-input-container h1 {
+  margin-bottom: 20px;
+}
+
+.name-input {
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 80%;
+  max-width: 300px;
+  margin-bottom: 10px;
+}
+
+.submit-button {
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #ff9800;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.submit-button:hover {
+  background-color: #e68900;
 }
